# nbody-sim

./: .gitignore  CMakeLists.txt  Readme.md
.github/workflows/: cmake-ubuntu.yml
include/: particle_system.hpp  physics.hpp  quadtree.hpp
src/: benchmark.cpp  main.cpp
